--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://mkatay/github.io/portfolio",
+  "homepage": "https://mkatay/github.io/portfolio-react",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
